--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,8 @@
 
     <dimen name="default_spacing_small">4dp</dimen>
     <dimen name="default_spacing_medium">8dp</dimen>
+    <dimen name="default_spacing_large">16dp</dimen>
     <dimen name="default_spacing_huge">128dp</dimen>
-
+    <dimen name="toolbar_elevation">4dp</dimen>
+    <dimen name="header_height">180dp</dimen>
 </resources>
