--- a/app/src/main/res/layout/include_toolbar.xml
+++ b/app/src/main/res/layout/include_toolbar.xml
@@ -7,6 +7,7 @@
     android:background="@color/colorPrimary"
     android:padding="@dimen/default_spacing_medium"
     android:orientation="horizontal"
+    android:elevation="@dimen/toolbar_elevation"
     >
 
     <Spinner
